--- a/css/main.css
+++ b/css/main.css
@@ -18,31 +18,8 @@ html {
   font-style: normal;
 }
 
-body {
-  width: 1000px;
-  margin: 0;
-  padding: 1.7rem;
-  padding-top: 1rem;
-  align-items: center;
-  grid-template-columns: 1fr;
-  display: grid;
-  grid-template-areas:
-    "header"
-    "main";
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-nav {
-  padding-top: .5rem;
-}
-
-img {
-  display: block;
-  width: 100%;
+.logo {
+  text-align: center;
 }
 
 h1 {
@@ -53,12 +30,23 @@ h1 {
 
 header h2 {
   padding: 0;
-  margin: 0;
+  margin: -.02rem;
   font-size: 1.125rem;
+  margin-top: -.03rem;
 }
 
-.header-banner {
+body {
+  margin: 0;
+  padding: 1rem;
   padding-top: 1rem;
+  padding-bottom: 0;
+  align-items: center;
+}
+
+nav {
+  margin-left: -2.5rem;
+  margin-top: -1rem;
+  margin-right: 1.5rem;
 }
 
 a {
@@ -67,83 +55,369 @@ a {
 
 ul {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 li {
   list-style-type: none;
-  padding-left: 1rem;
+  padding-left: 2rem;
   font-size: 1.125rem;
 }
 
-.japanese-text {
-  width: 28rem;
-  text-align: center;
+header {
+  display: block;
+  justify-content: center;
+  margin-top: -.04rem;
 }
 
-.words {
-  width: 30rem;
-  text-align: center;
-  padding-bottom: 1rem;
+.header-banner {
+  width: 100%;
 }
 
 .text-container {
   margin: auto;
   border-bottom: .2rem solid #e2e2e2;
   border-top: .2rem solid #e2e2e2;
-  margin-top: 1.6rem;
-  margin-bottom: 1rem;
-}
-
-div i {
-  font-size: 2rem;
+  margin-top: 1.2rem;
+  margin-bottom: 1.5rem;
 }
 
 main {
-  display: flex;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 1rem;
-}
-
-h2 {
-  font-size: 1.5rem;
-  padding: 0;
-  margin: 0;
-}
-
-h3 {
-  font-size: 1.125rem;
-  padding: 0;
-  margin: 0;
-}
-
-main p {
-  font-size: 1rem;
-  margin-bottom: 1.5rem;
-  padding-bottom: 1rem;
-  margin-left: 1rem;
-  padding-left: 0;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 main a {
   text-decoration: none;
-  border: .2rem solid #3783a3;
   color: #3783a3;
-  padding: .5em 1em .6em;
+  border: .2rem solid #3783a3;
   border-radius: .3rem;
+  padding: .5em 1em .6em;
+  display: block;
 }
 
-footer {
-  margin-top: 2rem;
+main p {
+  font-size: .98rem;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 0;
+  margin-top: 1.2rem;
+}
+
+.words {
   text-align: center;
-  font-size: .75rem;
-  border-top: .2rem solid #e2e2e2;
+  padding-bottom: 1rem;
+  font-size: 1rem;
+  margin-top: -1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.japanese-text {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: -1.1rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 main img {
-  margin-left: 0;
-  margin-bottom: 1.5rem;
-  height: 13.7rem;
-  width: 19rem;
+  width: 100%;
+}
+
+h3 {
+  font-size: 1rem;
+}
+
+footer {
+  margin-top: 1.5rem;
+  text-align: center;
+  font-size: .9rem;
+  border-top: .2rem solid #e2e2e2;
+  padding-bottom: .5rem;
+}
+
+@media screen and (min-width: 38em) {
+
+  body {
+    max-width: 1000px;
+    margin: 0;
+    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 0;
+    align-items: center;
+    grid-template-columns: 1fr;
+    display: grid;
+    grid-template-areas:
+      "header"
+      "main";
+  }
+
+  nav {
+    padding-top: .5rem;
+    margin-right: 0;
+    margin-top: .1rem;
+  }
+
+  img {
+    display: block;
+    width: 100%;
+  }
+
+  h1 {
+    padding: 0;
+    margin: 0;
+    margin-left: -.7rem;
+    font-size: 2rem;
+  }
+
+  header h2 {
+    padding: 0;
+    margin: 0;
+    font-size: 1.125rem;
+  }
+
+  .header-banner {
+    padding-top: 1rem;
+  }
+
+  a {
+    color: #3783a3;
+  }
+
+  ul {
+    display: flex;
+    justify-content: center;
+  }
+
+  li {
+    list-style-type: none;
+    padding-left: 1rem;
+    font-size: 1.125rem;
+  }
+
+  .japanese-text {
+    width: 28rem;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    line-height: 1.5;
+    height: 8rem;
+    margin-top: -2rem;
+  }
+
+  .words {
+    width: 30rem;
+    text-align: center;
+    padding-bottom: 1rem;
+    font-size: 1rem;
+    margin-top: 0;
+  }
+
+  .text-container {
+    margin: auto;
+    border-bottom: .2rem solid #e2e2e2;
+    border-top: .2rem solid #e2e2e2;
+    margin-top: 1.6rem;
+    margin-bottom: 1.5rem;
+  }
+
+  div i {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  h3 {
+    font-size: 1.125rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+    grid-column-gap: 1rem;
+  }
+
+  main img {
+    width: 11rem;
+    margin-bottom: 1.8rem;
+  }
+
+  main a {
+    text-decoration: none;
+    color: #3783a3;
+    border: .2rem solid #3783a3;
+    border-radius: .3rem;
+    padding: .5em 1em .6em;
+    display: block;
+  }
+
+  main p {
+    font-size: .98rem;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 0;
+    margin-top: 1.2rem;
+  }
+
+  footer {
+    margin-top: 1.5rem;
+    text-align: center;
+    font-size: .9rem;
+    border-top: .2rem solid #e2e2e2;
+    padding-bottom: .5rem;
+  }
+
+}
+
+@media screen and (min-width: 62.5em) {
+
+  body {
+    max-width: 1000px;
+    margin: 0;
+    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 0;
+    align-items: center;
+    grid-template-columns: 1fr;
+    display: grid;
+    grid-template-areas:
+      "header"
+      "main";
+  }
+
+  nav {
+    padding-top: .5rem;
+  }
+
+  img {
+    display: block;
+    width: 100%;
+  }
+
+  h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 2rem;
+  }
+
+  header h2 {
+    padding: 0;
+    margin: 0;
+    font-size: 1.125rem;
+  }
+
+  .header-banner {
+    padding-top: 1rem;
+  }
+
+  a {
+    color: #3783a3;
+  }
+
+  ul {
+    display: flex;
+    justify-content: center;
+  }
+
+  li {
+    list-style-type: none;
+    padding-left: 1rem;
+    font-size: 1.125rem;
+  }
+
+  .japanese-text {
+    width: 28rem;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    margin-top: -1rem;
+  }
+
+  .words {
+    width: 30rem;
+    text-align: center;
+    padding-bottom: 1rem;
+    font-size: 1rem;
+    margin-top: -1rem;
+  }
+
+  .text-container {
+    margin: auto;
+    border-bottom: .2rem solid #e2e2e2;
+    border-top: .2rem solid #e2e2e2;
+    margin-top: 1.6rem;
+    margin-bottom: 1.5rem;
+  }
+
+  div i {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  h3 {
+    font-size: 1.125rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 1fr;
+    grid-column-gap: 1rem;
+  }
+
+  main img {
+    margin-left: 0;
+    margin-bottom: 1rem;
+    height: 13.7rem;
+    width: 19rem;
+  }
+
+  main p {
+    font-size: 1rem;
+    margin-bottom: .5rem;
+    padding-bottom: 1rem;
+    padding-left: 0;
+  }
+
+  main a {
+    text-decoration: none;
+    border: .2rem solid #3783a3;
+    color: #3783a3;
+    padding: .5em 1em .6em;
+    border-radius: .3rem;
+  }
+
+  footer {
+    margin-top: 1.5rem;
+    text-align: center;
+    font-size: .75rem;
+    border-top: .2rem solid #e2e2e2;
+    margin-bottom: 2px;
+  }
+
 }
